# wineraise

./: .gitignore
backend/: README.md  manage.py  pyproject.toml
backend/core/: apps.py
backend/core/templates/core/: documentation.html
backend/core/test/: __init__.py  basetestclasses.py
backend/core/tests/: __init__.py  test_core.py
backend/user/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py  0002_alter_user_id.py  0003_remove_user_name_user_first_name_user_last_name.py
backend/user/tests/: __init__.py  test_user_api.py
backend/wine/: __init__.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/wine/migrations/: 0001_initial.py  0002_auto_20210304_2235.py  0003_auto_20210306_1018.py  0004_auto_20210306_1108.py  0005_auto_20210306_1118.py  0006_auto_20210306_1129.py  0007_auto_20210308_1903.py  0008_auto_20210316_0715.py  0009_alter_library_id_alter_review_id_alter_tag_id_and_more.py
backend/wine/tests/: __init__.py  test_library_api.py  test_tags_api.py  test_wine_api.py
backend/wineraise/: asgi.py  settings.py  urls.py  wsgi.py
